<resources>
    <string name="app_name">MyAppportfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_project">CAPSTONE:MY OWN APP</string>
</resources>
