<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F2FD"
    tools:context="com.example.sravanthi.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/appTitle"
        android:textSize="20sp"
        android:textColor="#0D47A1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer_btn"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#F08C35"
        android:onClick="spotifyStreamer"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app_btn"
        android:layout_below="@+id/spotify_streamer_btn"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="scoresApp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app_btn"
        android:layout_below="@+id/scores_app_btn"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="libraryApp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_btn"
        android:layout_below="@+id/library_app_btn"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="buildItBigger"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader_btn"
        android:layout_below="@+id/build_it_bigger_btn"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="xyzReader"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_project"
        android:id="@+id/capstone_my_own_app_btn"
        android:layout_below="@+id/xyz_reader_btn"
        android:layout_centerHorizontal="true"
        android:background="#FF1744"
        android:layout_marginTop="10dp"
        android:onClick="capstoneProject"/>




</RelativeLayout>
